--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -34,9 +34,6 @@
     </tr>
 
     <% end %>
-    <tr>
-
-      <td><%= link_to "注文履歴一覧を見る", "/admin" %> </td>
-    </tr>
+   <%= paginate @customers %>
   </tbody>
 </table>
