--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,4 +1,4 @@
-<h3><%= @customer.name %>さんの会員詳細</h3>
+<h3><%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細</h3>
 
 
 <div>
@@ -9,36 +9,36 @@
   <tbody>
     <tr>
       <th>会員ID</th>
-       <td></td>
+       <td><%= @customer.id %></td>
     </tr>
     <tr>
-      <tr>氏名</tr>
+      <th>氏名</th>
        <td><%= @customer.last_name %>
            <%= @customer.first_name %>
        </td>
     </tr>
     <tr>
-      <tr>フリガナ</tr>
+      <th>フリガナ</th>
       <td><%= @customer.last_name_kana %><%= @customer.first_name_kana %></td>
     </tr>
     <tr>
-      <tr>郵便番号</tr>
+      <th>郵便番号</th>
       <td><%= @customer.postal_code %></td>
     </tr>
     <tr>
-      <tr>住所</tr>
+      <th>住所</th>
       <td><%= @customer.address %></td>
     </tr>
     <tr>
-      <tr>電話番号</tr>
+      <th>電話番号</th>
       <td><%= @customer.telephone_number %></td>
     </tr>
     <tr>
-      <tr>メールアドレス</tr>
+      <th>メールアドレス</th>
       <td><%= @customer.email %></td>
     </tr>
     <tr>
-      <tr>会員ステータス</tr>
+      <th>会員ステータス</th>
       <td>
         <% if @customer.is_active == false %>
                 有効
