--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Public::Items#index</h1>
-<p>Find me in app/views/public/items/index.html.erb</p>
+<h2>商品一覧<span>＜全<%= @quantity %>件＞</span></h2><br>
+
+ <h6>
+   <div>
+    <% @items.each do |item| %>
+
+<%= link_to public_item_path(item.id), data: {"turbolinks" => false} do %>
+        <% if item.image.attached? %>
+          <%= image_tag item.image, size: "180×125" %>
+         <% else %>
+          <%= image_tag 'no_image', size: "180×125" %>
+         <% end %><br>
+         <% end %>
+         <%= item.name %><br>
+         ¥<%= item.price.to_s(:delimited, delimiter: ',') %>
+
+ </div>
+  <% end %>
+
+ </h6>
