--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,2 +1,50 @@
-<h1>Public::Items#show</h1>
-<p>Find me in app/views/public/items/show.html.erb</p>
+<div>
+  <h3><商品詳細></h3>
+
+<div>
+   <% if @item.image.attached? %>
+    <%= image_tag @item.image, size: "300x300" %>
+   <% else %>
+    <%= image_tag 'no_image', size: "300x300" %>
+   <% end %>
+</div>
+
+<div>
+  <br><br><br><br>
+<div>
+  <tbody>
+<% form_for (@cart_item , url: customers_cart_items_path(item_id: @item), method: :post) do |form| %>
+    <tr>
+      <th>商品名</th>
+      <td><%= @item.name %></td>
+
+    </tr>
+    <tr>
+      <th>ジャンル</th>
+       <td><%= @item.genre.name %></td>
+    </tr>
+    <tr>
+      <th>
+          <div>
+           税込価格<br>(税抜価格)
+          </div>
+      </th>
+      <td><%= @item.add_tax_price.to_s(:dalimited) %>,（<%= @item.price %>）円</td>
+
+    </tr>
+
+    <tr>
+       <%= form_for @cart_item, url: public_cart_items_path(@cart_item) do |f| %>
+        <%= f.hidden_field :item_id  , :value => @item.id%>
+        <%= f.number_field :number_of_items , placeholder: "個数選択", min: 1, max: 20 %> <!-- f.selectでも可。placeholderで空欄時に個数選択を表示。選択数の最低値を設定するためにminを設定。 -->
+        <%= f.submit "カートに入れる" ,class: 'btn btn-primary' %>
+        <% end %>
+      <td><%= link_to "Edit", edit__item_path(@item) %></td>
+    </tr>
+
+  </tbody>
+</table>
+
+</div>
+</div>
+</div>
